@@ -199,8 +199,7 @@ grow_horizontal = 2
 grow_vertical = 2
 rotation = -1.5707964
 pivot_offset = Vector2(282, 96.5)
-MaxCards = 6
-Separation = -50
+Separation = 0
 
 [node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/OppBoard"]
 layout_mode = 1
@@ -372,8 +371,7 @@ grow_horizontal = 2
 grow_vertical = 2
 rotation = 1.5707964
 pivot_offset = Vector2(282, 96.5)
-MaxCards = 6
-Separation = -50
+Separation = 0
 
 [node name="Center" type="Control" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer"]
 layout_mode = 2
@@ -564,8 +562,9 @@ offset_right = 279.5
 offset_bottom = 96.5
 grow_horizontal = 2
 grow_vertical = 2
-MaxCards = 5
-Separation = -30
+MaxCards = 0
+Separation = 0
+Alignment = 1
 
 [node name="PlayerHand" type="PanelContainer" parent="."]
 layout_mode = 1
