@@ -15,21 +15,40 @@ public class GuardPhaseStrategy(DuelCreaturesBoard Board, UnitCircleComponent Gu
 
         List<VanguardCard> selectedCards = [];
         int basePower = Board.PlayerVanguard.UnitCircle.GetOverallPower();
+
+        bool returningCard = false;
                 
         while(true)
         {
             TaskCompletionSource<Card?> completionSource = new();
-            Action<Card> selectionHandler = (card) =>
+            Action<Card> guardDroppedHandler = (card) =>
             {
                 Board.DisableGuardDropping();
                 Board.PlayerHand.RemoveCard(card);
                 Board.GuardZone.AddCard(card);
                 completionSource.SetResult(card);
             };
-            Board.GuardZone.CardDropped += selectionHandler; 
+            Board.GuardZone.CardDropped += guardDroppedHandler; 
+
+            Action<CardBaseComponent> guardDraggedHandler = (card) =>
+            {
+                returningCard = true;
+                Board.EnablePlayerHandDropping();
+            };
+            Board.GuardZone.CardDragging += guardDraggedHandler;
+
+            Action<Card> handDroppedHandler = (card) =>
+            {
+                Board.DisablePlayerHandDropping();
+                Board.GuardZone.RemoveCard(card, false);
+                Board.PlayerHand.AddCard(card);
+                completionSource.SetResult(card);
+            };
+            Board.PlayerHand.CardDropped += handDroppedHandler; 
 
             Action<CardBaseComponent> handDraggedHandler = (card) =>
             {
+                returningCard = false;
                 Board.EnableGuardDropping();
             };
             Board.PlayerHand.CardDragging += handDraggedHandler;
@@ -41,7 +60,9 @@ public class GuardPhaseStrategy(DuelCreaturesBoard Board, UnitCircleComponent Gu
             Board.LeftButtonPressed += confirmGuardHandler;
 
             var result = await completionSource.Task;
-            Board.GuardZone.CardDropped -= selectionHandler; 
+            Board.GuardZone.CardDropped -= guardDroppedHandler; 
+            Board.GuardZone.CardDragging -= guardDraggedHandler;
+            Board.PlayerHand.CardDropped -= handDroppedHandler; 
             Board.PlayerHand.CardDragging -= handDraggedHandler;
             Board.LeftButtonPressed -= confirmGuardHandler; 
 
@@ -50,9 +71,14 @@ public class GuardPhaseStrategy(DuelCreaturesBoard Board, UnitCircleComponent Gu
                 break;
             } 
 
-            selectedCards.Add((VanguardCard)result.CurrentCard);
-            GuardedCircle.UpdatePower(basePower + selectedCards.Sum(x => x.Power));
-
+            if(!returningCard)
+            {
+                selectedCards.Add((VanguardCard)result.CurrentCard);
+            } else
+            {
+                selectedCards.Remove((VanguardCard)result.CurrentCard);
+            }
+            GuardedCircle.UpdatePower(basePower + selectedCards.Sum(x => x.Guard));
             result.CurrentlyDragged = false;
         }
 
