@@ -2,6 +2,7 @@ v.0002 Skills and Trigger selection
 - Updated for ArC v.0000004
 - Utilize VanguardAI from ArC, InputProviderFactory loads the AI data
 - Implemented Card can be placed for Guarding
+    - Can return cards back to hand
 
 v.0001 Duel Creatures
 - Created Placeholder card
